--- a/English.lproj/DifferencesPane.xib
+++ b/English.lproj/DifferencesPane.xib
@@ -21,7 +21,6 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="303"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -49,7 +48,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomView" id="554596880">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -441,7 +440,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 17}, {576, 227}}</string>
 																				<reference key="NSSuperview" ref="419162342"/>
-																				<reference key="NSNextKeyView" ref="881988333"/>
 																				<reference key="NSDocView" ref="881988333"/>
 																				<reference key="NSBGColor" ref="556110869"/>
 																				<int key="NScvFlags">4</int>
@@ -474,7 +472,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 0}, {576, 17}}</string>
 																				<reference key="NSSuperview" ref="419162342"/>
-																				<reference key="NSNextKeyView" ref="806650689"/>
 																				<reference key="NSDocView" ref="806650689"/>
 																				<reference key="NSBGColor" ref="556110869"/>
 																				<int key="NScvFlags">4</int>
@@ -483,7 +480,6 @@
 																		</object>
 																		<string key="NSFrameSize">{578, 245}</string>
 																		<reference key="NSSuperview" ref="916368163"/>
-																		<reference key="NSNextKeyView" ref="808912985"/>
 																		<int key="NSsFlags">562</int>
 																		<reference key="NSVScroller" ref="710322696"/>
 																		<reference key="NSHScroller" ref="121468575"/>
@@ -590,7 +586,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 1}, {576, 98}}</string>
 																				<reference key="NSSuperview" ref="600317501"/>
-																				<reference key="NSNextKeyView" ref="840140607"/>
 																				<reference key="NSDocView" ref="840140607"/>
 																				<reference key="NSBGColor" ref="362265160"/>
 																				<object class="NSCursor" key="NSCursor" id="118410487">
@@ -622,7 +617,6 @@
 																		</object>
 																		<string key="NSFrameSize">{578, 100}</string>
 																		<reference key="NSSuperview" ref="408340467"/>
-																		<reference key="NSNextKeyView" ref="627348136"/>
 																		<int key="NSsFlags">530</int>
 																		<reference key="NSVScroller" ref="166966951"/>
 																		<reference key="NSHScroller" ref="810354078"/>
@@ -955,7 +949,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 17}, {561, 227}}</string>
 																				<reference key="NSSuperview" ref="1021669154"/>
-																				<reference key="NSNextKeyView" ref="939755695"/>
 																				<reference key="NSDocView" ref="939755695"/>
 																				<reference key="NSBGColor" ref="556110869"/>
 																				<int key="NScvFlags">4</int>
@@ -988,7 +981,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 0}, {561, 17}}</string>
 																				<reference key="NSSuperview" ref="1021669154"/>
-																				<reference key="NSNextKeyView" ref="791455395"/>
 																				<reference key="NSDocView" ref="791455395"/>
 																				<reference key="NSBGColor" ref="556110869"/>
 																				<int key="NScvFlags">4</int>
@@ -997,7 +989,6 @@
 																		</object>
 																		<string key="NSFrameSize">{563, 245}</string>
 																		<reference key="NSSuperview" ref="450333883"/>
-																		<reference key="NSNextKeyView" ref="651340939"/>
 																		<int key="NSsFlags">562</int>
 																		<reference key="NSVScroller" ref="69265425"/>
 																		<reference key="NSHScroller" ref="924188148"/>
@@ -1091,7 +1082,6 @@
 																				</object>
 																				<string key="NSFrame">{{1, 1}, {561, 98}}</string>
 																				<reference key="NSSuperview" ref="423754578"/>
-																				<reference key="NSNextKeyView" ref="1034117941"/>
 																				<reference key="NSDocView" ref="1034117941"/>
 																				<reference key="NSBGColor" ref="362265160"/>
 																				<reference key="NSCursor" ref="118410487"/>
@@ -1120,7 +1110,6 @@
 																		</object>
 																		<string key="NSFrameSize">{563, 100}</string>
 																		<reference key="NSSuperview" ref="267726690"/>
-																		<reference key="NSNextKeyView" ref="818658241"/>
 																		<int key="NSsFlags">530</int>
 																		<reference key="NSVScroller" ref="234140757"/>
 																		<reference key="NSHScroller" ref="322229599"/>
@@ -1803,7 +1792,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{1142, 732}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSClassName">DifferencesPaneView</string>
 			</object>
 			<object class="NSUserDefaultsController" id="692698573">
@@ -1896,22 +1884,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="792506798"/>
-						<reference key="destination" ref="1001"/>
-					</object>
-					<int key="connectionID">387</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="471764028"/>
-						<reference key="destination" ref="1001"/>
-					</object>
-					<int key="connectionID">388</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="554596880"/>
@@ -1957,22 +1929,6 @@
 						<reference key="destination" ref="939755695"/>
 					</object>
 					<int key="connectionID">553</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">parentController</string>
-						<reference key="source" ref="939755695"/>
-						<reference key="destination" ref="1001"/>
-					</object>
-					<int key="connectionID">555</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">parentController</string>
-						<reference key="source" ref="881988333"/>
-						<reference key="destination" ref="1001"/>
-					</object>
-					<int key="connectionID">556</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -2325,6 +2281,54 @@
 						<reference key="destination" ref="554596880"/>
 					</object>
 					<int key="connectionID">592</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="881988333"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">593</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="939755695"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">594</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="792506798"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">595</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="471764028"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">596</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">parentController</string>
+						<reference key="source" ref="939755695"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">597</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">parentController</string>
+						<reference key="source" ref="881988333"/>
+						<reference key="destination" ref="554596880"/>
+					</object>
+					<int key="connectionID">598</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3535,7 +3539,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">592</int>
+			<int key="maxID">598</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3547,7 +3551,7 @@
 						<string key="NS.key.0">theDifferencesPaneView</string>
 						<string key="NS.object.0">DifferencesPaneView</string>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="782577682">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="1027022689">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/DifferencesPane/DifferencesPaneController.h</string>
 					</object>
@@ -3576,6 +3580,7 @@
 							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>differencesMenuOpenTerminalHere:</string>
 							<string>differencesMenuRevealSelectedFilesInFinder:</string>
+							<string>mainMenuDiffSelectedFiles:</string>
 							<string>openDifferencesPane:</string>
 							<string>redisplayBrowser:</string>
 							<string>refreshDifferencesPane:</string>
@@ -3583,6 +3588,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -3637,7 +3643,7 @@
 							<string>FSBrowser</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="782577682"/>
+					<reference key="sourceIdentifier" ref="1027022689"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FSBrowser</string>
