--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -12,7 +12,6 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="581"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -30,7 +29,7 @@
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSCustomObject" id="1001">
-				<string key="NSClassName">HistoryPaneController</string>
+				<string key="NSClassName">HistoryViewController</string>
 			</object>
 			<object class="NSCustomObject" id="1003">
 				<string key="NSClassName">FirstResponder</string>
@@ -42,7 +41,7 @@
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 			<object class="NSView" id="945562250">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -137,7 +136,7 @@
 																						<string key="NSColorName">controlBackgroundColor</string>
 																						<object class="NSColor" key="NSColor" id="423405456">
 																							<int key="NSColorSpace">3</int>
-																							<bytes key="NSWhite">MC42NjY2NjY2ODY1AA</bytes>
+																							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 																						</object>
 																					</object>
 																					<object class="NSColor" key="NSTextColor" id="490767243">
@@ -1532,7 +1531,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{822, 631}</string>
-				<reference key="NSSuperview"/>
 			</object>
 			<object class="NSMenu" id="886653824">
 				<string key="NSTitle"/>
@@ -2182,11 +2180,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">theHistoryPaneView</string>
+						<string key="label">theHistoryView</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="945562250"/>
 					</object>
-					<int key="connectionID">1007</int>
+					<int key="connectionID">1008</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3136,7 +3134,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>HistoryPaneView</string>
+					<string>HistoryView</string>
 					<string>{{164, 16}, {822, 631}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3259,33 +3257,13 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">1007</int>
+			<int key="maxID">1008</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">HistoryPaneController</string>
-					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">theHistoryPaneView</string>
-						<string key="NS.object.0">HistoryPaneView</string>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="175243914">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/HistoryPane/HistoryPaneController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HistoryPaneController</string>
-					<string key="superclassName">NSViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBUserSource</string>
-						<string key="minorKey"/>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HistoryPaneView</string>
+					<string key="className">HistoryView</string>
 					<string key="superclassName">NSView</string>
 					<object class="NSMutableDictionary" key="actions">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -3305,7 +3283,7 @@
 							<string>mainMenuHistoryEditChangesets:</string>
 							<string>mainMenuRebaseChangesets:</string>
 							<string>mainMenuStripChangesets:</string>
-							<string>refreshHistoryPane:</string>
+							<string>refreshHistoryView:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -3344,12 +3322,27 @@
 							<string>NSTextView</string>
 							<string>NSView</string>
 							<string>LogTableView</string>
-							<string>HistoryPaneController</string>
+							<string>HistoryViewController</string>
 							<string>NSButton</string>
 							<string>LabelsTableView</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="175243914"/>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistoryViewController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">theHistoryView</string>
+						<string key="NS.object.0">HistoryView</string>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
+					</object>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">JHAccordionSubView</string>
@@ -3536,7 +3529,7 @@
 							<string>actionSwitchViewToBackingPane:</string>
 							<string>actionSwitchViewToBrowserPane:</string>
 							<string>actionSwitchViewToDifferencesPane:</string>
-							<string>actionSwitchViewToHistoryPane:</string>
+							<string>actionSwitchViewToHistoryView:</string>
 							<string>actionTestListingItem:</string>
 							<string>browserMenuOpenSelectedFilesInFinder:</string>
 							<string>browserMenuOpenTerminalHere:</string>
